:sparkles: Toevoeging van procestypen aan de API tbv archivering van zaken
Deze lijst wordt nu al door VNG uitgegeven (in Excel en PDF-vorm). Naar
automatisering toe is het wenselijk om dit via een API te ontsluiten.
