# src/vrl/procestypen/api/serializers.py
@@ -1,0 +1,21 @@
+from rest_framework import serializers
+
+from ..models import ProcesType
+
+
+class ProcesTypeSerializer(serializers.HyperlinkedModelSerializer):
+    class Meta:
+        model = ProcesType
+        fields = (
+            'url',
+            'nummer',
+            'naam',
+            'omschrijving',
+            'toelichting',
+            'procesobject'
+        )
+        extra_kwargs = {
+            'url': {
+                'lookup_field': 'uuid',
+            }
+        }
